--- a/e2e/performance/pyproject.toml
+++ b/e2e/performance/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 locust = "^1.1.1"
 pyjwt = "^2.4.0"
 cryptography = "^43.0.0"
+flask = "2.2.5"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^3.8.3"
