--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -32,6 +32,7 @@ extends:
     service_base_path: ${{ variables.service_base_path }}
     enable_monitoring: true
     enable_status_monitoring: true
+    python_version: ${{ variables.python_version }}
     jinja_templates:
       IDENTITY_PROVIDER_CIS2: cis2-keycloak
       IDENTITY_PROVIDER_NHS_LOGIN: nhs-login-keycloak
