Added few names to steps

--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -24,14 +24,15 @@ jobs:
       contents: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
-        with:
-          fetch-depth: 1
-      - uses: actions/setup-python@v5
+        uses: actions/checkout@v5        
+
+      - name: Setup Python 3.13
+        uses: actions/setup-python@v5
         with:
           python-version: "3.13"
 
-      - uses: hashicorp/setup-terraform@v3
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ${{ env.TF_VERSION }}
 
