--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -10,63 +10,30 @@ on:
         options:
           - yes
           - no
-
-env:
-  SYFT_VERSION: "1.27.1"
-  TF_VERSION: "1.12.2"
+        default: yes
 
 jobs:
   deploy:
+    if: ${{ github.event.inputs.environment == 'yes' }}
     name: Software Bill of Materials
     runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: write
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v5        
+      - name: Checkout repository
+        uses: actions/checkout@v5
 
-      - name: Setup Python 3.13
-        uses: actions/setup-python@v5
+      - name: Generate SBOM
+        uses: anchore/sbom-action@v0
         with:
-          python-version: "3.13"
+          path: ./
+          format: cyclonedx-json
+          artifact-name: sbom-repo.cdx.json
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: ${{ env.TF_VERSION }}
-
-      - uses: terraform-linters/setup-tflint@v5
-        name: Setup TFLint
-        with:
-          tflint_version: v0.58.0
-
-      - name: Set architecture variable
-        id: os-arch
-        run: |
-          case "${{ runner.arch }}" in
-            X64) ARCH="amd64" ;;
-            ARM64) ARCH="arm64" ;;
-          esac
-          echo "arch=${ARCH}" >> $GITHUB_OUTPUT
-
-      - name: Download and setup Syft
-        run: |
-          DOWNLOAD_URL="https://github.com/anchore/syft/releases/download/v${{ env.SYFT_VERSION }}/syft_${{ env.SYFT_VERSION }}_linux_${{ steps.os-arch.outputs.arch }}.tar.gz"
-          echo "Downloading: ${DOWNLOAD_URL}"
-
-          curl -L -o syft.tar.gz "${DOWNLOAD_URL}"
-          tar -xzf syft.tar.gz
-          chmod +x syft
-
-          # Add to PATH for subsequent steps
-          echo "$(pwd)" >> $GITHUB_PATH
-
-      - name: Create SBOM
-        run: bash scripts/create-sbom.sh terraform python tflint
-
-      - name: Upload SBOM as artifact
+      - name: Upload SBOM artifact
         uses: actions/upload-artifact@v4
         with:
           name: sbom
-          path: sbom.json
+          path: sbom-repo.cdx.json
