--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -4,17 +4,17 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: "Run SBOM check"
+        description: "Apply SBOM check"
         required: true
         type: choice
         options:
-          - "yes"
-          - "no"
-        default: "yes"
+          - apply
+          - skip
+        default: apply
 
 jobs:
-  deploy:
-    if: ${{ github.event.inputs.environment == 'yes' }}
+  sbom-check:
+    if: ${{ github.event.inputs.environment == 'apply' }}
     name: Software Bill of Materials
     runs-on: ubuntu-latest
     permissions:
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Generate SBOM
-        uses: anchore/sbom-action@v0
+        uses: anchore/sbom-action@v0.9.0
         with:
           path: ./
           format: cyclonedx-json
@@ -35,5 +35,8 @@ jobs:
       - name: Upload SBOM artifact
         uses: actions/upload-artifact@v4
         with:
-          name: sbom
+          name: sbom-${{ github.run_id }}
           path: sbom-repo.cdx.json
+
+      - name: Clean up SBOM file
+        run: rm sbom-repo.cdx.json
