--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -26,11 +26,11 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Generate SBOM
-        uses: anchore/sbom-action@v0.9.0
+        uses: anchore/sbom-action@v0
         with:
           path: ./
           format: cyclonedx-json
-          artifact-name: sbom-repo.cdx.json
+          artifact-name: identity-repo-sbom.cdx.json
           upload-artifact: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
