--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -25,6 +25,44 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
+      - name: Install Python 3.9
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.9
+      
+      - name: Update apt repositories
+        run: sudo apt update
+
+      - name: Install Java
+        run: sudo apt-get install --yes default-jre default-jdk
+
+      - name: Install node
+        run: |
+          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+          curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
+          sudo apt-get install -y nodejs
+
+      - name: Upgrade python packaging tools
+        run: python -m pip install --upgrade pip setuptools wheel
+
+      - name: Install poetry
+        run: pip install "poetry<2.0.0"
+
+      - name: Cache poetry packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-build-cache-poetry-packages-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Cache node modules
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-build-cache-npm-packages-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Install repo
+        run: make install
+
       - name: Generate SBOM
         uses: anchore/sbom-action@v0
         with:
