--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ python-dotenv = "^0.21.1"
 PyJWT = "^2.9.0"
 cryptography = "^43.0.0"
 pytest-docker = "^3.1.1"
+urllib3 = "^2.6.3"
 
 [tool.poetry.scripts]
 
