--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -1,4 +1,9 @@
 steps:
+  - task: UsePythonVersion@0
+    displayName: "Use Python ${{ parameters.python_version }}"
+    inputs:
+      versionSpec: ${{ parameters.python_version }}
+
   - task: s3-cache-action@1
     inputs:
       key: 'poetry | ./poetry.lock'
