--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 repository = "https://github.com/NHSDigital/identity-service-api"
 homepage = "https://github.com/NHSDigital/identity-service-api"
 keywords = ["healthcare", "uk", "nhs"]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9"
