--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -25,15 +25,14 @@ jobs:
 
       - name: Install node
         run: |
-          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-          curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
-          sudo apt-get install -y nodejs
+            curl -fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash -
+            sudo apt-get install -y nodejs
 
       - name: Upgrade python packaging tools
         run: python -m pip install --upgrade pip setuptools wheel
 
       - name: Install poetry
-        run: pip install "poetry<2.0.0"
+        run: pip install "poetry==2.2.1"
 
       - name: Cache poetry packages
         uses: actions/cache@v4
