--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -25,15 +25,14 @@ jobs:
 
       - name: Install node
         run: |
-          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-          curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
+          curl -fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash -
           sudo apt-get install -y nodejs
 
       - name: Upgrade python packaging tools
         run: python -m pip install --upgrade pip setuptools wheel
 
       - name: Install poetry
-        run: pip install "poetry<2.0.0"
+        run: pip install "poetry==2.2.1"
 
       - name: Cache poetry packages
         uses: actions/cache@v4
@@ -51,9 +50,7 @@ jobs:
         run: make install
 
       - name: Set SPEC_VERSION env var
-        run: echo ::set-env name=SPEC_VERSION::$(poetry run python scripts/calculate_version.py)
-        env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+        run: echo "SPEC_VERSION=$(poetry run python scripts/calculate_version.py)" >> "$GITHUB_ENV"
 
       - name: Create release (master only)
         id: create-release
