--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ pytest-xdist = {extras = ["psutil"], version = "^2.4.0"}
 pytest-custom-exit-code = "^0.3.0"
 pytest-nhsd-apim = "^5.0.3"
 pyjwt = "^2.9.0"
+authlib="^1.6.6"
+urllib3="^2.6.3"
 
 
 [tool.poetry.group.dev.dependencies]
